Fix: Overflow of pre element outside the container

--- a/app/assets/stylesheets/actiontext.css
+++ b/app/assets/stylesheets/actiontext.css
@@ -34,6 +34,7 @@
   box-shadow: 0 0 8px #EEE;
   border-radius: 0.25rem;
   font-size: 1em;
+  text-wrap: wrap;
 }
 
 trix-editor pre {
